--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,15 @@
     <meta name="theme-color" content="#f44336" />
     <meta
       name="description"
-      content="This is the portfolio of Marek Grzyb, Game Developer and Programmer"
+      content="This is the portfolio of Bharath Kumar, Mechanical Engineer and Python Programmer"
     />
-    <meta name="author" content="Marek Grzyb">
-    <meta name="keywords" content="Marek, Grzyb, Portfolio, Video, Game, Developer, Programmer, C++, C#, .NET, ASP.NET, Java, Android, Unity, Unreal, Engine, UE, Mobile, Desktop, Web, Resume, CV">
+    <meta name="author" content="Bharath Kumar">
+    <meta name="keywords" content="Bharath, Kumar, Portfolio, Mechanical, Engineer, Python, Programmer, Android, Mobile, Desktop, Web, Resume, CV">
 
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
-    <title>grzybdev.github.io | Marek Grzyb - Game Developer &amp; Programmer Portfolio</title>
+    <title>jbk005.github.io | Bharath Kumar Mechanical Engineer and Python Programmer</title>
   </head>
   <body>
     <noscript>Sorry, You need to enable JavaScript to view this site.</noscript>
