--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,22 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
     <title>jbk005.github.io | Bharath Kumar Mechanical Engineer and Python Programmer</title>
+    
+
+    <script type = "text/javascript" > ! function (i)
+    {
+      if (i.search)
+      {
+        var l = {};
+        i.search.slice(1).split("&").forEach(function (i)
+        {
+          var a = i.split("=");
+          l[a[0]] = a.slice(1).join("=").replace(/~and~/g, "&")
+        }), void 0 !== l.p && window.history.replaceState(null, null, i.pathname.slice(0, -1) + (l.p || "") + (l.q ? "?" + l.q : "") + i.hash)
+      }
+    }(window.location) </script>
+
+
   </head>
   <body>
     <noscript>Sorry, You need to enable JavaScript to view this site.</noscript>
